# opti

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
migrations/: env.py
opti/: auth.py  chat.py  config.py  database.py  jwt.py  jwt_utils.py  main.py  models.py  redis.py  user_api.py  utils.py
opti/api/: chat.py  schema.py  tasks.py  user_api.py
opti/auth/: api.py  auth.py  jwt.py  models.py  scheme.py  service.py
opti/chat/: api.py  models.py  schema.py  service.py  tasks.py  utils.py
opti/core/: config.py  database.py  models.py  redis.py
opti/user_api/: schema.py  user_api.py
tests/: conftest.py  test_auth.py  test_chat.py  test_user_api.py
